# VeritasNode

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/fastapi/: Dockerfile  __init__.py  main.py  requirements.txt
backend/fastapi/app/: config.py  database.py  main.py  schemas.py
backend/fastapi/app/models/: __init__.py  verification.py
backend/fastapi/app/routes/: audit.py  verification.py
backend/fastapi/app/services/: __init__.py  ai_verifier.py  ipfs_service.py  stellar_service.py
contracts/soroban/: Cargo.toml
contracts/soroban/src/: lib.rs  test.rs
frontend/nextjs/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/nextjs/app/: globals.css  layout.tsx  page.tsx
frontend/nextjs/app/activity/: page.tsx
frontend/nextjs/app/audit/: page.tsx
frontend/nextjs/app/repositories/: page.tsx
frontend/nextjs/app/settings/: page.tsx
frontend/nextjs/app/verifications/: page.tsx
frontend/nextjs/components/dashboard/: confidence-distribution.tsx  recent-verifications.tsx  stats-cards.tsx  verification-chart.tsx
frontend/nextjs/components/layout/: app-layout.tsx  sidebar.tsx
frontend/nextjs/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  tabs.tsx
frontend/nextjs/lib/: api.ts  utils.tsx
scripts/: init-db.sql
