[package]
name = "veritas-node-contract"
version = "0.1.0"
edition = "2021"
description = "VeritasNode - History of Truth smart contract on Stellar/Soroban"
license = "MIT"
repository = "https://github.com/veritas-node/veritas-node"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = "21.0.1"

[dev-dependencies]
soroban-sdk = { version = "21.0.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release-with-logs]
inherits = "release"
opt-level = "s"
strip = false
debug = true
